# LI1

./: 2022li1g012.cabal  LICENSE  README.md
assets/: Balde.xcf  Font.xcf  Tiles.xcf
screenshots/: README.md
spec/: README.md
src/: Audio.hs  Audio_2022li1g012.hs  Editor_2022li1g012.hs  ErroM_2022li1g012.hs  FicheiroMapa_2022li1g012.hs  Frogger_2022li1g012.hs  GameOver_2022li1g012.hs  GameOver_2022li1g012.hs-boot  Gerador_2022li1g012.hs  Infinito_2022li1g012.hs  JogoComum_2022li1g012.hs  LI12223.hs  MPreEdit_2022li1g012.hs  Main.hs  MenuD_2022li1g012.hs  MenuF_2022li1g012.hs  MenuF_2022li1g012.hs-boot  MenuP_2022li1g012.hs  MenuP_2022li1g012.hs-boot  RenderMapa_2022li1g012.hs  Tarefa1_2022li1g012.hs  Tarefa2_2022li1g012.hs  Tarefa3_2022li1g012.hs  Tarefa4_2022li1g012.hs  Tarefa5_2022li1g012.hs  UI_2022li1g012.hs
tests/: Spec.hs  Tarefa1_2022li1g012_Spec.hs  Tarefa2_2022li1g012_Spec.hs  Tarefa3_2022li1g012_Spec.hs  Tarefa4_2022li1g012_Spec.hs  Tarefa5_2022li1g012_Spec.hs
