cabal-version:      2.4
name:               2022li1g012
version:            0.1.0.0
synopsis:           Projeto de LI1 (clone de Crossy Road)
license:            Apache-2.0

author:             José António Fernandes Alves Lopes <a104541@alunos.uminho.pt>
                    Humberto Gil Azevedo Sampaio Gomes <a104348@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
  build-depends:    base ^>=4.15.1.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g012
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
  build-depends:    base ^>=4.15.1.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g012-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
    Tarefa1_2022li1g012_Spec
    Tarefa2_2022li1g012_Spec
    Tarefa3_2022li1g012_Spec
    Tarefa4_2022li1g012_Spec
  build-depends:        base ^>=4.15.1.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
