cabal-version:      2.4
name:               2022li1g012
version:            0.1.0.0
synopsis:           Projeto de LI1 (clone de Crossy Road)
license:            Apache-2.0

author:             José António Fernandes Alves Lopes <a104541@alunos.uminho.pt>
                    Humberto Gil Azevedo Sampaio Gomes <a104348@alunos.uminho.pt>

data-files: assets/export/AudioPlaylist/*.wav assets/export/*.bmp

-- TODO: isto não aparenta funcionar. Resolver
package gloss
  ghc-options: -O2 -threaded
  flags: GLFW -GLUT

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
    Tarefa5_2022li1g012
    UI_2022li1g012
  build-depends:    base >=4.13.3.0 && < 5, gloss >=1.13.0.1, bmp >=1.2, process
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g012
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
    Tarefa5_2022li1g012

    FicheiroMapa_2022li1g012
    UI_2022li1g012
    RenderMapa_2022li1g012
    Gerador_2022li1g012

    MenuP_2022li1g012
    ErroM_2022li1g012
    MenuF_2022li1g012
    MPreEdit_2022li1g012
    Editor_2022li1g012
    MenuD_2022li1g012

    JogoComum_2022li1g012
    Frogger_2022li1g012
    Infinito_2022li1g012
    GameOver_2022li1g012
    Audio_2022li1g012
  build-depends:    base >=4.13.3.0 && < 5, gloss >=1.13.0.1, bmp >=1.2,
    directory, filepath, random, random-shuffle, process
  ghc-options: -O2 -threaded
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g012-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g012
    Tarefa2_2022li1g012
    Tarefa3_2022li1g012
    Tarefa4_2022li1g012
    Tarefa5_2022li1g012
    UI_2022li1g012
    Tarefa1_2022li1g012_Spec
    Tarefa2_2022li1g012_Spec
    Tarefa3_2022li1g012_Spec
    Tarefa4_2022li1g012_Spec
    Tarefa5_2022li1g012_Spec
  build-depends:        base >=4.13.3.0 && < 5, HUnit, gloss >=1.13.0.1, bmp >=1.2, process
  hs-source-dirs:       tests src
  default-language:     Haskell2010
